force-app/main/default/objects/Appraisal__c/Appraisal__c.object-meta.xml
<CustomObject>
    <label>Appraisal</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Appraisal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appraisals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>