force-app/main/default/objects/Appraisal__c/fields/After_Repair_Value_Variance__c.field-meta.xml
<CustomField>
    <fullName>After_Repair_Value_Variance__c</fullName>
    <description>Comparison of the After Repair Value on the Reviewed Appraisal and Appraisal Review</description>
    <formula>(Appraised_After_Repair_Value__c - Reviewed_Appraisal_After_Repair_Value__c)/Reviewed_Appraisal_After_Repair_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Comparison of the After Repair Value on the Reviewed Appraisal and Appraisal Review</inlineHelpText>
    <label>After Repair Value Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>