force-app/main/default/objects/Appraisal__c/fields/APN_Assessor_s_Parcel__c.field-meta.xml
<CustomField>
    <fullName>APN_Assessor_s_Parcel__c</fullName>
    <label>APN/Assessor&apos;s Parcel #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>