force-app/main/default/objects/Appraisal__c/fields/Appraisal_COD__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_COD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Borrower is paying for the Appraisal</description>
    <inlineHelpText>Indicates that the Borrower is paying for the Appraisal</inlineHelpText>
    <label>Appraisal COD</label>
    <type>Checkbox</type>
</CustomField>