force-app/main/default/objects/Appraisal__c/fields/Appraisal_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Completion_Date__c</fullName>
    <description>Date the Appraisal Report was completed by the Appraisal Firm</description>
    <inlineHelpText>Date the Appraisal Report was completed by the Appraisal Firm</inlineHelpText>
    <label>Appraisal Completion Date</label>
    <type>DateTime</type>
</CustomField>