force-app/main/default/objects/Appraisal__c/fields/Appraisal_Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Due_Date_Time__c</fullName>
    <description>The Appraisal Due Date returned by the Appraisal Firm after order submission</description>
    <inlineHelpText>The Appraisal Due Date returned by the Appraisal Firm after order submission</inlineHelpText>
    <label>Appraisal Due Date/Time</label>
    <type>DateTime</type>
</CustomField>