force-app/main/default/objects/Appraisal__c/fields/Appraisal_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Effective_Date__c</fullName>
    <label>Appraisal Effective Date</label>
    <type>Date</type>
</CustomField>