force-app/main/default/objects/Appraisal__c/fields/Appraisal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Fee__c</fullName>
    <description>Fee associated with the Appraisal performed</description>
    <inlineHelpText>Fee associated with the Appraisal performed</inlineHelpText>
    <label>Appraisal Fee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>