force-app/main/default/objects/Appraisal__c/fields/Appraisal_Firm_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Firm_Order_ID__c</fullName>
    <description>Order ID from the Appraisal Firm</description>
    <inlineHelpText>Order ID from the Appraisal Firm</inlineHelpText>
    <label>Appraisal Firm Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>