force-app/main/default/objects/Appraisal__c/fields/Appraisal_Firm_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Firm_Transaction_ID__c</fullName>
    <description>Transaction ID from the Appraisal Firm</description>
    <inlineHelpText>Transaction ID from the Appraisal Firm</inlineHelpText>
    <label>Appraisal Firm Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>