force-app/main/default/objects/Appraisal__c/fields/Appraisal_Form__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Form__c</fullName>
    <description>Name of the Appraisal form</description>
    <label>Appraisal Form</label>
    <length>30</length>
    <type>Text</type>
</CustomField>