force-app/main/default/objects/Appraisal__c/fields/Appraisal_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Invoicing__c</fullName>
    <label>Appraisal Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Required at Closing</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>AMC - Payment Required at Closing</fullName>
            </value>
            <value>
                <fullName>AMC - Paid</fullName>
            </value>
            <value>
                <fullName>Mercury - Outstanding</fullName>
            </value>
            <value>
                <fullName>Mercury - Paid by Borrower</fullName>
            </value>
            <value>
                <fullName>Mercury - Paid to Appraiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>