force-app/main/default/objects/Appraisal__c/fields/Appraisal_Product_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Product_Ordered__c</fullName>
    <description>The Appraisal Product Type ordered</description>
    <inlineHelpText>The Appraisal Product Type ordered</inlineHelpText>
    <label>Appraisal Product Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interior Appraisal</fullName>
            </value>
            <value>
                <fullName>Exterior Appraisal</fullName>
            </value>
            <value>
                <fullName>Appraisal Update</fullName>
            </value>
            <value>
                <fullName>Final Inspection</fullName>
            </value>
            <value>
                <fullName>Recert. of Value</fullName>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>CDAIR Exterior Disaster Area Inspection Report</fullName>
            </value>
            <value>
                <fullName>CDAIR Interior Disaster Area Inspection Report</fullName>
            </value>
            <value>
                <fullName>ClearVal Plus (Interior PCI)</fullName>
            </value>
            <value>
                <fullName>ClearVal Plus (Exterior PCI)</fullName>
            </value>
            <value>
                <fullName>Commercial Narrative</fullName>
            </value>
            <value>
                <fullName>CoreVal+</fullName>
            </value>
            <value>
                <fullName>EDR</fullName>
            </value>
            <value>
                <fullName>Internal In-House Appraisal</fullName>
            </value>
            <value>
                <fullName>Market Value Pro Exterior</fullName>
            </value>
            <value>
                <fullName>Post Disaster Inspection</fullName>
            </value>
            <value>
                <fullName>Desktop Summary Appraisal</fullName>
            </value>
            <value>
                <fullName>Appraisal Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>