force-app/main/default/objects/Appraisal__c/fields/Appraisal_Review__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Review__c</fullName>
    <label>Appraisal Review Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>