force-app/main/default/objects/Appraisal__c/fields/Appraisal_Review_Indication__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Review_Indication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is an Appraisal Review</description>
    <inlineHelpText>Indicates that this is an Appraisal Review</inlineHelpText>
    <label>Appraisal Review Indication</label>
    <type>Checkbox</type>
</CustomField>