force-app/main/default/objects/Appraisal__c/fields/Appraisal_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Reviewed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Appraisal being reviewed</description>
    <inlineHelpText>This is the Appraisal being reviewed</inlineHelpText>
    <label>Appraisal Reviewed</label>
    <referenceTo>Appraisal__c</referenceTo>
    <relationshipLabel>Appraisals</relationshipLabel>
    <relationshipName>Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>