force-app/main/default/objects/Appraisal__c/fields/Appraisal_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraisal Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>