force-app/main/default/objects/Appraisal__c/fields/Appraisal_Tracking_Comments__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Tracking_Comments__c</fullName>
    <label>Appraisal Tracking Comments</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>