force-app/main/default/objects/Appraisal__c/fields/Appraised_After_Repair_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraised_After_Repair_Value__c</fullName>
    <description>This is the value of the Property after report provided by the Appraisal Firm</description>
    <label>Appraised After Repair Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>