force-app/main/default/objects/Appraisal__c/fields/Appraised_As_Stabilized_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraised_As_Stabilized_Value__c</fullName>
    <description>This is the As Stabilized Value provided by the Appraisal Firm</description>
    <label>Appraised As Stabilized Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>