force-app/main/default/objects/Appraisal__c/fields/Appraised_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value_Amount__c</fullName>
    <label>Appraised As Is Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>