force-app/main/default/objects/Appraisal__c/fields/Appraiser__c.field-meta.xml
<CustomField>
    <fullName>Appraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraiser</label>
    <referenceTo>Appraiser__c</referenceTo>
    <relationshipLabel>Appraisals</relationshipLabel>
    <relationshipName>Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>