force-app/main/default/objects/Appraisal__c/fields/Appraiser_as_Rehab_LTV__c.field-meta.xml
<CustomField>
    <fullName>Appraiser_as_Rehab_LTV__c</fullName>
    <formula>IF(Property__r.After_Repair_Value__c&gt;0, Deal__r.LOC_Commitment__c/Property__r.After_Repair_Value__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appraiser as Rehab LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>