force-app/main/default/objects/Appraisal__c/fields/As_Is_Value_Variance__c.field-meta.xml
<CustomField>
    <fullName>As_Is_Value_Variance__c</fullName>
    <formula>(Appraised_Value_Amount__c- Appraisal_Reviewed__r.Appraised_Value_Amount__c) / Appraisal_Reviewed__r.Appraised_Value_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As-Is Value Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>