force-app/main/default/objects/Appraisal__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>