force-app/main/default/objects/Appraisal__c/fields/CAF_Originator_Email__c.field-meta.xml
<CustomField>
    <fullName>CAF_Originator_Email__c</fullName>
    <label>CAF Originator Email</label>
    <type>Email</type>
</CustomField>