force-app/main/default/objects/Appraisal__c/fields/Can_Order__c.field-meta.xml
<CustomField>
    <fullName>Can_Order__c</fullName>
    <formula>$Permission.Order_Appraisals_Through_API</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Order</label>
    <type>Checkbox</type>
</CustomField>