force-app/main/default/objects/Appraisal__c/fields/Can_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Can_Refresh__c</fullName>
    <formula>$Permission.Refresh_Appraisals_Through_API</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Refresh</label>
    <type>Checkbox</type>
</CustomField>