force-app/main/default/objects/Appraisal__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Date that the Appraisal was cancelled</description>
    <inlineHelpText>Date that the Appraisal was cancelled</inlineHelpText>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>