force-app/main/default/objects/Appraisal__c/fields/Car_Storage__c.field-meta.xml
<CustomField>
    <fullName>Car_Storage__c</fullName>
    <label>Car Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>