force-app/main/default/objects/Appraisal__c/fields/Comments_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Vendor__c</fullName>
    <description>These are the comments entered by the user submitting the order</description>
    <label>Comments to Vendor</label>
    <type>TextArea</type>
</CustomField>