force-app/main/default/objects/Appraisal__c/fields/Comp_2_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Comp_2_Sq_Ft__c</fullName>
    <label>Comp #2 Sq Ft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>