force-app/main/default/objects/Appraisal__c/fields/Comp_3_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Comp_3_Sales_Price__c</fullName>
    <label>Comp #3 Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>