force-app/main/default/objects/Appraisal__c/fields/Comp_3_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Comp_3_Sq_Ft__c</fullName>
    <label>Comp #3 Sq Ft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>