force-app/main/default/objects/Appraisal__c/fields/Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>Condition_Description__c</fullName>
    <label>Condition Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>