force-app/main/default/objects/Appraisal__c/fields/Conforms_to_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Conforms_to_Neighborhood__c</fullName>
    <label>Conforms to Neighborhood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>