force-app/main/default/objects/Appraisal__c/fields/Deal_Document__c.field-meta.xml
<CustomField>
    <fullName>Deal_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Document</label>
    <referenceTo>Deal_Document__c</referenceTo>
    <relationshipLabel>Appraisals</relationshipLabel>
    <relationshipName>Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>