force-app/main/default/objects/Appraisal__c/fields/Deal_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Type__c</fullName>
    <formula>TEXT(Deal__r.Type)</formula>
    <label>Deal Loan Type</label>
    <type>Text</type>
</CustomField>