force-app/main/default/objects/Appraisal__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Indicates the method used to get the Appraisal into the system</description>
    <inlineHelpText>Indicates the method used to get the Appraisal into the system</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>XML Upload</fullName>
            </value>
            <value>
                <fullName>User Created</fullName>
                <default>true</default>
                <label>User Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>