force-app/main/default/objects/Appraisal__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Requested Due Date for this Appraisal Order</description>
    <inlineHelpText>Requested Due Date for this Appraisal Order</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>