force-app/main/default/objects/Appraisal__c/fields/EBI_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>EBI_Project_Id__c</fullName>
    <description>EBI Project Id</description>
    <inlineHelpText>EBI Project Id</inlineHelpText>
    <label>EBI Project Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>