force-app/main/default/objects/Appraisal__c/fields/EBI_Project_No__c.field-meta.xml
<CustomField>
    <fullName>EBI_Project_No__c</fullName>
    <description>EBI Project No</description>
    <inlineHelpText>EBI Project No</inlineHelpText>
    <label>EBI Project No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>