force-app/main/default/objects/Appraisal__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>Estimated date that the Appraisal Firm will have completed the Appraisal</description>
    <inlineHelpText>Estimated date that the Appraisal Firm will have completed the Appraisal</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>DateTime</type>
</CustomField>