force-app/main/default/objects/Appraisal__c/fields/Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>Flood_Zone__c</fullName>
    <description>FEMA Flood Zone from the Appraisal</description>
    <inlineHelpText>FEMA Flood Zone from the Appraisal</inlineHelpText>
    <label>Flood Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>