force-app/main/default/objects/Appraisal__c/fields/Garage_of_Cars__c.field-meta.xml
<CustomField>
    <fullName>Garage_of_Cars__c</fullName>
    <label>Garage # of Cars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>