force-app/main/default/objects/Appraisal__c/fields/Gross_Living_Area__c.field-meta.xml
<CustomField>
    <fullName>Gross_Living_Area__c</fullName>
    <label>Gross Living Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>