force-app/main/default/objects/Appraisal__c/fields/HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA__c</fullName>
    <label>HOA $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>