force-app/main/default/objects/Appraisal__c/fields/Inspection_Complete__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Complete__c</fullName>
    <description>Indicates if the Inspection has been completed</description>
    <inlineHelpText>Indicates if the Inspection has been completed</inlineHelpText>
    <label>Inspection Complete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>