force-app/main/default/objects/Appraisal__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <description>Date Inspection has been scheduled</description>
    <inlineHelpText>Date Inspection has been scheduled</inlineHelpText>
    <label>Inspection Date</label>
    <type>DateTime</type>
</CustomField>