force-app/main/default/objects/Appraisal__c/fields/Internal_Appraisal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Appraisal_Comments__c</fullName>
    <label>Internal Appraisal Comments</label>
    <type>TextArea</type>
</CustomField>