force-app/main/default/objects/Appraisal__c/fields/Internal_as_Rehab_LTV__c.field-meta.xml
<CustomField>
    <fullName>Internal_as_Rehab_LTV__c</fullName>
    <formula>Deal__r.LOC_Commitment__c / Internal_as_Rehab_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal as Rehab LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>