force-app/main/default/objects/Appraisal__c/fields/Internal_as_Rehab_Value__c.field-meta.xml
<CustomField>
    <fullName>Internal_as_Rehab_Value__c</fullName>
    <label>Internal as Rehab Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>