force-app/main/default/objects/Appraisal__c/fields/Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description__c</fullName>
    <label>Legal Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>