force-app/main/default/objects/Appraisal__c/fields/Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>Link_Formula__c</fullName>
    <formula>&apos;/lightning/r/Appraisal__c/&apos; + Id + &apos;/view&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Formula</label>
    <type>Text</type>
</CustomField>