force-app/main/default/objects/Appraisal__c/fields/Loan_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Loan_Manager_Email__c</fullName>
    <label>Loan Manager Email</label>
    <type>Email</type>
</CustomField>