force-app/main/default/objects/Appraisal__c/fields/LOMOS_Id__c.field-meta.xml
<CustomField>
    <fullName>LOMOS_Id__c</fullName>
    <label>LOMOS Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>