force-app/main/default/objects/Appraisal__c/fields/Lot_Area__c.field-meta.xml
<CustomField>
    <fullName>Lot_Area__c</fullName>
    <label>Lot Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>