force-app/main/default/objects/Appraisal__c/fields/Management_Company_text__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_text__c</fullName>
    <label>Management Company text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>