force-app/main/default/objects/Appraisal__c/fields/No_of_Stories__c.field-meta.xml
<CustomField>
    <fullName>No_of_Stories__c</fullName>
    <label># of Stories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>