force-app/main/default/objects/Appraisal__c/fields/Number_of_Comments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Comments__c</fullName>
    <label>Number of Comments</label>
    <summaryForeignKey>Appraisal_Order_Comment__c.Appraisal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>