force-app/main/default/objects/Appraisal__c/fields/On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Date__c</fullName>
    <description>Date the Appraisal Firm put this order on hold</description>
    <inlineHelpText>Date the Appraisal Firm put this order on hold</inlineHelpText>
    <label>On Hold Date</label>
    <type>DateTime</type>
</CustomField>