force-app/main/default/objects/Appraisal__c/fields/Order_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Accepted_Date__c</fullName>
    <label>Order Accepted Date</label>
    <type>Date</type>
</CustomField>