force-app/main/default/objects/Appraisal__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>EBI Order Number</description>
    <inlineHelpText>EBI Order Number</inlineHelpText>
    <label>EBI Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>