force-app/main/default/objects/Appraisal__c/fields/Order_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Received_Date__c</fullName>
    <description>Date the Appraisal Order entered Appraisal Firm&apos;s system</description>
    <inlineHelpText>Date the Appraisal Order entered Appraisal Firm&apos;s system</inlineHelpText>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>