force-app/main/default/objects/Appraisal__c/fields/PCA_Report_Manager__c.field-meta.xml
<CustomField>
    <fullName>PCA_Report_Manager__c</fullName>
    <description>EBI PCA Report Manager</description>
    <inlineHelpText>EBI PCA Report Manager</inlineHelpText>
    <label>EBI PCA Report Manager</label>
    <type>TextArea</type>
</CustomField>