force-app/main/default/objects/Appraisal__c/fields/PCA_Report_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>PCA_Report_Manager_Email__c</fullName>
    <description>EBI PCA Report Manager Email</description>
    <inlineHelpText>EBI PCA Report Manager Email</inlineHelpText>
    <label>EBI PCA Report Manager Email</label>
    <type>Email</type>
</CustomField>