force-app/main/default/objects/Appraisal__c/fields/PCA_Reports_Due__c.field-meta.xml
<CustomField>
    <fullName>PCA_Reports_Due__c</fullName>
    <description>EBI PCA Reports Due</description>
    <inlineHelpText>EBI PCA Reports Due</inlineHelpText>
    <label>EBI PCA Reports Due</label>
    <type>DateTime</type>
</CustomField>