force-app/main/default/objects/Appraisal__c/fields/Phase_One_Reports_Due__c.field-meta.xml
<CustomField>
    <fullName>Phase_One_Reports_Due__c</fullName>
    <description>EBI Phase One Reports Due</description>
    <inlineHelpText>EBI Phase One Reports Due</inlineHelpText>
    <label>EBI Phase One Reports Due</label>
    <type>DateTime</type>
</CustomField>