force-app/main/default/objects/Appraisal__c/fields/Post_Close_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Post_Close_Appraisal__c</fullName>
    <label>Post Close Appraisal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - pending internal value</fullName>
            </value>
            <value>
                <fullName>Yes - internal value provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>