force-app/main/default/objects/Appraisal__c/fields/Prevent_Auto_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Auto_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will prevent this Property from being refreshed through API during the auto refresh</description>
    <inlineHelpText>This will prevent this Property from being refreshed through API during the auto refresh</inlineHelpText>
    <label>Prevent Auto Refresh</label>
    <type>Checkbox</type>
</CustomField>