force-app/main/default/objects/Appraisal__c/fields/Price_for_ESA__c.field-meta.xml
<CustomField>
    <fullName>Price_for_ESA__c</fullName>
    <description>EBI Price for ESA</description>
    <label>EBI Price for ESA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>