force-app/main/default/objects/Appraisal__c/fields/Price_for_RDNSMP__c.field-meta.xml
<CustomField>
    <fullName>Price_for_RDNSMP__c</fullName>
    <description>EBI Price for RDNSMP</description>
    <inlineHelpText>EBI Price for RDNSMP</inlineHelpText>
    <label>EBI Price for RDNSMP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>