force-app/main/default/objects/Appraisal__c/fields/Price_for_Zoning_Report__c.field-meta.xml
<CustomField>
    <fullName>Price_for_Zoning_Report__c</fullName>
    <description>EBI Price for Zoning Report</description>
    <inlineHelpText>EBI Price for Zoning Report</inlineHelpText>
    <label>EBI Price for Zoning Report</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>